enum OperatingSystem { android, ios, windowsPhone }
