enum Vendor { samsung, apple, nokia }
